--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,22 +1,25 @@
 {
-	"name": "web",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite --port 3000",
-		"build": "vue-tsc && vite build",
-		"preview": "vite preview",
-		"lint": "bunx @biomejs/biome check ./src --apply"
-	},
-	"dependencies": {
-		"vue": "^3.3.11"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.4.1",
-		"@vitejs/plugin-vue": "^4.5.2",
-		"typescript": "^5.2.2",
-		"vite": "^5.0.8",
-		"vue-tsc": "^1.8.25"
-	}
+  "name": "web",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --port 3000",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "lint": "bunx @biomejs/biome check ./src --apply"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21",
+    "vue": "^3.3.11",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.4.1",
+    "@types/lodash-es": "^4.17.12",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
+    "vue-tsc": "^1.8.25"
+  }
 }
