--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "lint": "turbo lint && bunx @biomejs/biome check ./ --apply",
-    "format": "bunx @biomejs/biome format ./ --write"
+    "lint": "turbo lint",
+    "format": "turbo format"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
