--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -6,8 +6,8 @@
 	"module": "./dist/index.mjs",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "tsup src/index.ts --format esm,cjs --dts",
-		"dev": "tsup src/index.ts --format esm,cjs --watch --dts",
+		"build": "tsup",
+		"dev": "tsup --watch",
 		"format": "bunx @biomejs/biome format ./src --write"
 	},
 	"license": "MIT",
