--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --port 3000",
-		"build": "vue-tsc && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "bunx @biomejs/biome check ./src --apply",
 		"format": "bunx @biomejs/biome format ./src --write"
