--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "format": "turbo format",
-    "update": "turbo update",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@repo/biome-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/biome-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.28",
     "autoprefixer": "^10.4.18",
     "husky": "^9.0.11",
