--- a/packages/biome-config/package.json
+++ b/packages/biome-config/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "@repo/biome-config",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "exports": {
-    "./biome": "./biome.json"
-  },
-  "license": "MIT",
-  "publishConfig": {
-    "access": "public"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.6.2"
-  }
+	"name": "@repo/biome-config",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"update": "bunx npm-check-updates -ui"
+	},
+	"exports": {
+		"./biome": "./biome.json"
+	},
+	"license": "MIT",
+	"publishConfig": {
+		"access": "public"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.6.2"
+	}
 }
