--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@repo/lib",
-  "version": "0.0.0",
-  "private": true,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "format": "bunx @biomejs/biome format ./src --write",
-    "update": "bunx npm-check-updates -ui"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "js-cookie": "^3.0.5"
-  },
-  "devDependencies": {
-    "@repo/biome-config": "workspace:*",
-    "@types/js-cookie": "^3.0.6",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.3"
-  }
+	"name": "@repo/lib",
+	"version": "0.0.0",
+	"private": true,
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"scripts": {
+		"build": "tsup",
+		"dev": "tsup --watch",
+		"format": "bunx @biomejs/biome format ./src --write",
+		"update": "bunx npm-check-updates -ui",
+		"check-types": "tsc --noEmit"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"js-cookie": "^3.0.5"
+	},
+	"devDependencies": {
+		"@repo/biome-config": "workspace:*",
+		"@types/js-cookie": "^3.0.6",
+		"tsup": "^8.0.2",
+		"typescript": "^5.4.3"
+	}
 }
