--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "tailwindcss": "^3.4.3",
-    "turbo": "latest"
+    "turbo": "^1.13.0"
   },
   "engines": {
     "node": ">=18"
