--- a/package.json
+++ b/package.json
@@ -16,14 +16,20 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "tailwindcss": "^3.4.3",
-    "turbo": "^1.13.3"
+    "turbo": "^2.0.3"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "bun@1.1.1",
-  "workspaces": ["apps/*", "packages/*"],
+  "packageManager": "bun@1.1.12",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "lint-staged": {
-    "*.{js,ts,vue}": ["bun run lint", "bun run format"]
+    "*.{js,ts,vue}": [
+      "bun run lint",
+      "bun run format"
+    ]
   }
 }
