--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -16,8 +16,6 @@
 		}
 	},
 	"files": {
-		"ignore": [
-			"./components/ui/**"
-		]
+		"ignore": ["./components/ui/**"]
 	}
 }
