--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -1,3 +1,6 @@
 {
-	"extends": ["@repo/biome-config/biome"]
+	"extends": ["@repo/biome-config/biome"],
+	"files": {
+		"ignore": ["./public/mockServiceWorker.js"]
+	}
 }
