--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,8 @@
     "embla-carousel": "^8.1.7",
     "embla-carousel-vue": "^8.1.7",
     "lodash-es": "^4.17.21",
-    "lucide-vue-next": "^0.412.0",
+    "lucide-vue-next": "^0.416.0",
+    "msw": "^2.3.4",
     "pinia": "^2.1.7",
     "radix-vue": "^1.9.2",
     "tailwind-merge": "^2.4.0",
@@ -33,16 +34,21 @@
     "v-calendar": "^3.1.2",
     "vaul-vue": "^0.2.0",
     "vee-validate": "^4.13.2",
-    "vue": "^3.4.33",
-    "vue-sonner": "^1.1.3",
+    "vue": "^3.4.34",
+    "vue-sonner": "^1.1.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@repo/biome-config": "workspace:*",
     "@types/lodash-es": "^4.17.12",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.5.3",
-    "vite": "^5.3.4",
-    "vue-tsc": "^2.0.26"
+    "@vitejs/plugin-vue": "^5.1.0",
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5",
+    "vue-tsc": "^2.0.29"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
