--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@repo/biome-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.12",
     "autoprefixer": "^10.4.19",
-    "husky": "^9.0.11",
+    "husky": "^9.1.2",
     "lint-staged": "^15.2.7",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.7",
     "turbo": "^2.0.9"
   },
   "engines": {
@@ -30,6 +30,11 @@
     "*.{js,ts,vue}": [
       "bun run lint",
       "bun run format"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
