--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,54 +1,52 @@
 {
-  "name": "web",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "shadcn:init": "bunx shadcn-vue@latest init",
-    "shadcn:add": "bunx shadcn-vue@latest add",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "bunx @biomejs/biome check ./src --apply",
-    "format": "bunx @biomejs/biome format ./src --write",
-    "update": "bunx npm-check-updates -ui"
-  },
-  "dependencies": {
-    "@repo/lib": "workspace:*",
-    "@unovis/ts": "^1.4.3",
-    "@unovis/vue": "^1.4.3",
-    "@vee-validate/zod": "^4.13.2",
-    "@vueuse/core": "^10.11.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "embla-carousel": "^8.1.7",
-    "embla-carousel-vue": "^8.1.7",
-    "lodash-es": "^4.17.21",
-    "lucide-vue-next": "^0.417.0",
-    "msw": "^2.3.4",
-    "pinia": "^2.2.0",
-    "radix-vue": "^1.9.2",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "v-calendar": "^3.1.2",
-    "vaul-vue": "^0.2.0",
-    "vee-validate": "^4.13.2",
-    "vue": "^3.4.34",
-    "vue-sonner": "^1.1.4",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@repo/biome-config": "workspace:*",
-    "@types/lodash-es": "^4.17.12",
-    "@vitejs/plugin-vue": "^5.1.1",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5",
-    "vue-tsc": "^2.0.29"
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  }
+	"name": "web",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"shadcn:init": "bunx shadcn-vue@latest init",
+		"shadcn:add": "bunx shadcn-vue@latest add",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"lint": "biome lint ./src",
+		"format": "biome format ./src --write",
+		"update": "bunx npm-check-updates -ui"
+	},
+	"dependencies": {
+		"@repo/lib": "workspace:*",
+		"@unovis/ts": "^1.4.3",
+		"@unovis/vue": "^1.4.3",
+		"@vee-validate/zod": "^4.13.2",
+		"@vueuse/core": "^10.11.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"embla-carousel": "^8.1.8",
+		"embla-carousel-vue": "^8.1.8",
+		"lodash-es": "^4.17.21",
+		"lucide-vue-next": "^0.424.0",
+		"msw": "^2.3.5",
+		"pinia": "^2.2.0",
+		"radix-vue": "^1.9.2",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7",
+		"v-calendar": "^3.1.2",
+		"vaul-vue": "^0.2.0",
+		"vee-validate": "^4.13.2",
+		"vue": "^3.4.35",
+		"vue-sonner": "^1.1.4",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@repo/biome-config": "workspace:*",
+		"@types/lodash-es": "^4.17.12",
+		"@vitejs/plugin-vue": "^5.1.2",
+		"typescript": "^5.5.4",
+		"vite": "^5.3.5",
+		"vue-tsc": "^2.0.29"
+	},
+	"msw": {
+		"workerDirectory": ["public"]
+	}
 }
