--- a/package.json
+++ b/package.json
@@ -1,40 +1,33 @@
 {
-  "name": "vue-turborepo-boilerplate",
-  "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "turbo format",
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@repo/biome-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/node": "^20.14.12",
-    "autoprefixer": "^10.4.19",
-    "husky": "^9.1.2",
-    "lint-staged": "^15.2.7",
-    "tailwindcss": "^3.4.7",
-    "turbo": "^2.0.9"
-  },
-  "engines": {
-    "node": ">=18"
-  },
-  "packageManager": "bun@1.1.12",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "lint-staged": {
-    "*.{js,ts,vue}": [
-      "bun run lint",
-      "bun run format"
-    ]
-  },
-  "msw": {
-    "workerDirectory": [
-      "public"
-    ]
-  }
+	"name": "vue-turborepo-boilerplate",
+	"private": true,
+	"scripts": {
+		"build": "turbo build",
+		"dev": "turbo dev",
+		"check": "turbo check",
+		"lint": "turbo lint",
+		"format": "turbo format",
+		"prepare": "husky install"
+	},
+	"devDependencies": {
+		"@repo/biome-config": "workspace:*",
+		"@repo/typescript-config": "workspace:*",
+		"@types/node": "^20.14.12",
+		"autoprefixer": "^10.4.19",
+		"husky": "^9.1.2",
+		"lint-staged": "^15.2.7",
+		"tailwindcss": "^3.4.7",
+		"turbo": "^2.0.11"
+	},
+	"engines": {
+		"node": ">=18"
+	},
+	"packageManager": "bun@1.1.12",
+	"workspaces": ["apps/*", "packages/*"],
+	"lint-staged": {
+		"*.{js,ts,vue}": ["bun run lint", "bun run format"]
+	},
+	"msw": {
+		"workerDirectory": ["public"]
+	}
 }
