--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,6 +49,8 @@
 		"@repo/biome-config": "workspace:*",
 		"@types/lodash-es": "^4.17.12",
 		"@vitejs/plugin-vue": "^5.2.1",
+		"autoprefixer": "^10.4.20",
+		"tailwindcss": "^3.4.16",
 		"typescript": "^5.7.2",
 		"unplugin-vue-router": "^0.10.9",
 		"vite": "^6.0.3",
