--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,46 +16,46 @@
 		"lingui:compile": "lingui compile"
 	},
 	"dependencies": {
-		"@lingui/cli": "^5.1.0",
-		"@lingui/macro": "^5.1.0",
-		"@lingui/vite-plugin": "^5.1.0",
+		"@lingui/cli": "^5.2.0",
+		"@lingui/macro": "^5.2.0",
+		"@lingui/vite-plugin": "^5.2.0",
 		"@repo/lib": "workspace:*",
 		"@unovis/ts": "^1.5.0",
 		"@unovis/vue": "^1.5.0",
-		"@vee-validate/zod": "^4.14.7",
-		"@vueuse/core": "^12.0.0",
+		"@vee-validate/zod": "^4.15.0",
+		"@vueuse/core": "^12.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
-		"embla-carousel": "^8.5.1",
-		"embla-carousel-vue": "^8.5.1",
+		"embla-carousel": "^8.5.2",
+		"embla-carousel-vue": "^8.5.2",
 		"lodash-es": "^4.17.21",
-		"lucide-vue-next": "^0.468.0",
-		"msw": "^2.6.9",
-		"pinia": "^2.3.0",
-		"radix-vue": "^1.9.11",
-		"tailwind-merge": "^2.5.5",
+		"lucide-vue-next": "^0.474.0",
+		"msw": "^2.7.0",
+		"pinia": "^2.3.1",
+		"radix-vue": "^1.9.13",
+		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"v-calendar": "^3.1.2",
-		"vaul-vue": "^0.2.0",
-		"vee-validate": "^4.14.7",
+		"vaul-vue": "^0.2.1",
+		"vee-validate": "^4.15.0",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0",
 		"vue-sonner": "^1.3.0",
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
-		"@lingui/extractor-vue": "^5.1.0",
+		"@lingui/extractor-vue": "^5.2.0",
 		"@repo/biome-config": "workspace:*",
+		"@tailwindcss/postcss": "^4.0.0",
 		"@types/lodash-es": "^4.17.12",
 		"@vitejs/plugin-vue": "^5.2.1",
-		"autoprefixer": "^10.4.20",
-		"tailwindcss": "^3.4.16",
-		"typescript": "^5.7.2",
-		"unplugin-vue-router": "^0.10.9",
-		"vite": "^6.0.3",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.7.3",
+		"unplugin-vue-router": "^0.11.2",
+		"vite": "^6.1.0",
 		"vite-plugin-babel-macros": "^1.0.6",
-		"vue-tsc": "^2.1.10"
+		"vue-tsc": "^2.2.0"
 	},
 	"msw": {
 		"workerDirectory": ["public"]
