--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -1,5 +1,18 @@
 {
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"vcs": {
+		"enabled": false,
+		"clientKind": "git",
+		"useIgnoreFile": false
+	},
+	"files": {
+		"ignoreUnknown": false,
+		"ignore": ["./components/ui/**"]
+	},
+	"formatter": {
+		"enabled": true,
+		"indentStyle": "tab"
+	},
 	"organizeImports": {
 		"enabled": true
 	},
@@ -14,8 +27,5 @@
 			"quoteStyle": "single",
 			"semicolons": "asNeeded"
 		}
-	},
-	"files": {
-		"ignore": ["./components/ui/**"]
 	}
 }
