--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,17 +23,19 @@
 		"@unovis/ts": "^1.5.0",
 		"@unovis/vue": "^1.5.0",
 		"@vee-validate/zod": "^4.15.0",
-		"@vueuse/core": "^12.5.0",
+		"@vueuse/core": "^12.6.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel": "^8.5.2",
 		"embla-carousel-vue": "^8.5.2",
 		"lodash-es": "^4.17.21",
-		"lucide-vue-next": "^0.474.0",
+		"lucide-vue-next": "^0.475.0",
 		"msw": "^2.7.0",
-		"pinia": "^2.3.1",
-		"radix-vue": "^1.9.13",
+		"pinia": "^3.0.1",
+		"radix-vue": "^1.9.14",
+		"rxdb": "^16.6.1",
+		"rxjs": "^7.8.1",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7",
 		"v-calendar": "^3.1.2",
@@ -42,15 +44,15 @@
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0",
 		"vue-sonner": "^1.3.0",
-		"zod": "^3.24.1"
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@lingui/extractor-vue": "^5.2.0",
 		"@repo/biome-config": "workspace:*",
-		"@tailwindcss/postcss": "^4.0.0",
+		"@tailwindcss/postcss": "^4.0.6",
 		"@types/lodash-es": "^4.17.12",
 		"@vitejs/plugin-vue": "^5.2.1",
-		"tailwindcss": "^4.0.0",
+		"tailwindcss": "^4.0.6",
 		"typescript": "^5.7.3",
 		"unplugin-vue-router": "^0.11.2",
 		"vite": "^6.1.0",
