--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"check": "turbo check",
 		"lint": "turbo lint",
 		"format": "turbo format",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@repo/biome-config": "workspace:*",
