--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,30 +16,31 @@
 		"lingui:compile": "lingui compile"
 	},
 	"dependencies": {
-		"@lingui/cli": "^5.2.0",
-		"@lingui/macro": "^5.2.0",
-		"@lingui/vite-plugin": "^5.2.0",
+		"@lingui/cli": "^5.3.0",
+		"@lingui/macro": "^5.3.0",
+		"@lingui/vite-plugin": "^5.3.0",
 		"@repo/lib": "workspace:*",
-		"@unovis/ts": "^1.5.0",
-		"@unovis/vue": "^1.5.0",
+		"@unovis/ts": "^1.5.1",
+		"@unovis/vue": "^1.5.1",
 		"@vee-validate/zod": "^4.15.0",
-		"@vueuse/core": "^12.6.1",
+		"@vueuse/core": "^13.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"embla-carousel": "^8.5.2",
 		"embla-carousel-vue": "^8.5.2",
 		"lodash-es": "^4.17.21",
-		"lucide-vue-next": "^0.475.0",
-		"msw": "^2.7.0",
+		"lucide-vue-next": "^0.484.0",
+		"msw": "^2.7.3",
 		"pinia": "^3.0.1",
-		"radix-vue": "^1.9.14",
-		"rxdb": "^16.6.1",
-		"rxjs": "^7.8.1",
-		"tailwind-merge": "^3.0.1",
+		"radix-vue": "^1.9.17",
+		"rxdb": "^16.8.1",
+		"rxjs": "^7.8.2",
+		"swrv": "^1.1.0",
+		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"v-calendar": "^3.1.2",
-		"vaul-vue": "^0.2.1",
+		"vaul-vue": "^0.4.1",
 		"vee-validate": "^4.15.0",
 		"vue": "^3.5.13",
 		"vue-router": "^4.5.0",
@@ -47,17 +48,17 @@
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
-		"@lingui/extractor-vue": "^5.2.0",
+		"@lingui/extractor-vue": "^5.3.0",
 		"@repo/biome-config": "workspace:*",
-		"@tailwindcss/postcss": "^4.0.6",
+		"@tailwindcss/postcss": "^4.0.17",
 		"@types/lodash-es": "^4.17.12",
-		"@vitejs/plugin-vue": "^5.2.1",
-		"tailwindcss": "^4.0.6",
-		"typescript": "^5.7.3",
-		"unplugin-vue-router": "^0.11.2",
-		"vite": "^6.1.0",
+		"@vitejs/plugin-vue": "^5.2.3",
+		"tailwindcss": "^4.0.17",
+		"typescript": "^5.8.2",
+		"unplugin-vue-router": "^0.12.0",
+		"vite": "^6.2.3",
 		"vite-plugin-babel-macros": "^1.0.6",
-		"vue-tsc": "^2.2.0"
+		"vue-tsc": "^2.2.8"
 	},
 	"msw": {
 		"workerDirectory": ["public"]
