chore: overrides for vue

--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -2,6 +2,11 @@
 	"extends": [
 		"@repo/biome-config/biome"
 	],
+	"linter": {
+		"includes": [
+			"!./src/components/ui/**"
+		]
+	},
 	"files": {
 		"includes": [
 			"!./public/mockServiceWorker.js"
