chore: update biome v2.3

--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -9,7 +9,8 @@
 	},
 	"files": {
 		"includes": [
-			"!./public/mockServiceWorker.js"
+			"!./public/mockServiceWorker.js",
+			"!./src/**/*.css"
 		]
 	}
 }
